added Cv Page + cowerlLettwr  page + updated i18next file + added photos

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,7 +9,8 @@
     "Обновить страницу": "Reload page",
     "throw error": "throw error",
     "Главная": "Main",
-    "О сайте": "About us",
+    "О мне": "About me",
+    "Сопроводительное письмо": "Cower Letter",
     "Переключить": "Toggle",
     "Короткий язык": "En",
     "Войти": "Login",
