--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,7 +9,8 @@
     "Обновить страницу": "Обновить страницу",
     "throw error": "throw error",
     "Главная": "Главная",
-    "О сайте": "О сайте",
+    "Сопроводительное письмо": "Сопроводительное письмо",
+    "О мне": "О мне",
     "Переключить": "Переключить",
     "Короткий язык": "Ru",
     "Войти": "Войти",
