--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -1,5 +1,5 @@
 {
-    "О сайте": "About us",
-    "Админ панель": "Админ панель",
+    "О мне": "About me",
+    "Админ панель": "AdminUI",
     "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
 }
