--- a/public/locales/ru/about.json
+++ b/public/locales/ru/about.json
@@ -1,5 +1,5 @@
 {
-    "О сайте": "О сайте",
+    "О мне": "О мне",
     "Админ панель": "Админ панель",
     "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
 }
