--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -3,11 +3,15 @@
     "Редактировать": "Edit",
     "Ваша фамилия": "Your lastname",
     "Ваше имя": "Your name",
+    "Имя": "Name",
     "Произошла ошибка при загрузке профиля": "Upload error",
     "Попробуйте обновить страницу": "Try to update page",
     "Отменить": "Cancel",
     "Сохранить": "Save",
     "Город": "City",
+    "Фамилия": "Lastname",
+    "Возраст": "Age",
+    "Cсылка на аватар": "Avatar link",
     "Ваш возраст": "Your age",
     "Имя пользователя": "Username",
     "Введите имя пользователя": "Input username",
@@ -17,5 +21,5 @@
     "Имя и фамилия обязательны": "First and last name are required",
     "Данные не указаны": "Data is not specified",
     "Некорректный возраст": "Incorrect age",
-    "Профиль не найден": "Профиль не найден"
+    "Профиль не найден": "Profile not found"
 }
