--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,9 @@
 {
+    "Вариант интерфейса":"Interface option",
+    "Новый": "New",
+    "Старый": "Old",
+"Настройки пользователя":"User settings",
+
     "Тестовый пример": "Test example",
     "Перевод": "Translate",
     "Главная страница": "Main page",
