--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -10,6 +10,10 @@
     "Город": "Город",
     "Ваш возраст": "Ваш возраст",
     "Имя пользователя": "Имя пользователя",
+    "Имя": "Имя",
+    "Фамилия": "Фамилия",
+    "Возраст": "Возраст",
+    "Cсылка на аватар": "Cсылка на аватар",
     "Введите имя пользователя": "Введите имя пользователя",
     "Введите ссылку на аватар": "Введите ссылку на аватар",
     "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
