--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,15 @@
 {
+    "Вариант интерфейса":"Вариант интерфейса",
+     "Новый": "Новый",
+      "Старый": "Старый",
+       "Настройки пользователя":"Настройки пользователя",
+       "":"",
+       "":"",
+       "":"",
+       "":"",
+       "":"",
+       "":"",
+       "":"",
     "Тестовый пример": "Тестовый пример",
     "Перевод": "Перевод",
     "Главная страница": "Главная страница",
